2002-02-08  Ian Lance Taylor  <ian@airs.com>

	* log.c (ulog): Add code to HDB_LOGGING case to protect the
	administrator against foolishness.

	* Tom Ivar Helbekkmo: uux.c (main): Correct off-by-one error in
	memory allocation.

	* Vadim Radionov: copy.c (fcopy_open_file): Check for read
	errors.

	* Michael Ju. Tokarev: unix/serial.c (fsserial_open): Force port
	into blocking mode, in case the chat program cares.

	* unix/umode.c: New file.
	* unix/access.c (fsysdep_daemon_access): Change error message if
	stat returns EACCES.
	* uucp.c (uccopy): Use ixsysdep_user_file_mode to get the file
	mode.
	* system.h (ixsysdep_user_file_mode): Declare.
	* unix/Makefile.am (libunix_a_SOURCES): Add umode.c.
	* unix/Makefile.in: Rebuild.

	* Roland McGrath: unix/work.c (fsysdep_get_work_init): Add cmax
	parameter.  Change all callers.
	(fsysdep_get_work): Likewise.
	* system.h (fsysdep_get_work_init): Update declaration.
	(fsysdep_get_work): Likewise.

	* unix/tcp.c: Use getaddrinfo if available to decide how to call
	the socket functions.
	* configure.in: Check for getaddrinfo and struct
	sockaddr_storage.
	* configure, config.h.in: Rebuild.

	* unix/mkdirs.c (fsysdep_make_dirs): Correct error message in case
	where we don't have permission to create the directory.

2002-02-07  Ian Lance Taylor  <ian@airs.com>

	* John Hughes: uuxqt.c (uqcleanup): Don't unlock the execution
	file until after it has been removed, to avoid a race which may
	lead to it's being executed twice.

	* unix/xqtsub.c (fsysdep_lock_uuxqt_dir): Call fclean_uuxqt_dir.
	(fsysdep_unlock_uuxqt_dir): Move directory cleaning code into
	fclean_uuxqt_dir, and call it.
	(fclean_uuxqt_dir): New static function.

	* unix/xqtsub.c (fsysdep_copy_uuxqt_files): Rename from
	fsysdep_move_uuxqt_files.  Remove fto parameter.  Use link instead
	of rename.  Don't bother moving files back on failure.
	* uuxqt.c (uqdo_xqt_file): Call fsysdep_copy_uuxqt_files rather
	than fsysdep_move_uuxqt_files.  Remove call to