@@ -1036,7 +1036,7 @@ uqdo_xqt_file (puuconf, zfile, zbase, qsys, zlocalname, zcmd, pfprocessed)
 	  /* If "uucp" is not a permitted command, then only uucp
 	     requests with a single source are permitted, since that
 	     is all that will be generated by uucp or uux.  */
-	  if (fmany)
+	  if (fmany || zfrom == NULL || zto == NULL)
 	    {
 	      ulog (LOG_ERROR, "Bad uucp request %s", zQcmd);
 
@@ -1732,6 +1732,9 @@ fqforward (zfile, pzallowed, zlog, zmail)
      const char *zmail;
 {
   const char *zexclam;
+
+  if (zfile == NULL)
+    return TRUE;
 
   zexclam = strchr (zfile, '!');
   if (zexclam != NULL)
