@@ -1,5 +1,9 @@
 2002-02-08  Ian Lance Taylor  <ian@airs.com>
 
+	* uuxqt.c (uqdo_xqt_file): If uucp is not a permitted command,
+	then reject a uucp command which does not have two arguments.
+	(fqforward): Don't crash if zfile is NULL.
+
 	* log.c (ulog): Add code to HDB_LOGGING case to protect the
 	administrator against foolishness.
 
